# ds210-b1-sp25-lectures

./: .gitignore  LICENSE  README.md
final_notes/: challenge_questions.ipynb  challenge_questions_solutions.ipynb  final_exam_notes.ipynb  final_exam_notes.txt  section_a1_h2_polls.md
lecture_01/: lecture_01.ipynb
lecture_02/: lecture_02.ipynb
lecture_03/: example_text.txt  for_example1.sh  for_example2.sh  if_example.sh  lecture_03.ipynb  while_example1.sh  while_example2.sh
lecture_04/: hello.rs  lecture_04.ipynb
lecture_05/: lecture_05.ipynb  obscure.c
lecture_06/: lecture_06.ipynb
lecture_07/: lecture_07-python_extras.ipynb  lecture_07.ipynb
lecture_08/: lecture_08-python_extras.ipynb  lecture_08.ipynb
lecture_09/: lecture_09.ipynb
lecture_10/: lecture_10.ipynb  order_n_plots.ipynb
lecture_11/: lecture_11.ipynb
lecture_12/: lecture_12.ipynb
lecture_12/simple_package/: Cargo.toml
lecture_12/simple_package/src/: main.rs
lecture_12/simple_package/src/lib/: bar.rs  foo.rs  lib.rs
lecture_13/: lecture_13.ipynb  list_of_edges.txt  singly-linked-list.py
lecture_14/: lecture_14.ipynb
lecture_15/: lecture_15.ipynb
lecture_16/: lecture_16.ipynb  rise.css
lecture_17/: lecture_17-python.ipynb  lecture_17.ipynb
lecture_18/: lecture_18.ipynb
lecture_19/: lecture_19.ipynb
lecture_20/: lecture_20.ipynb  mnist_fcn.ipynb
lecture_21/: lecture_21.ipynb  more-plotting.txt  sales_data_types.csv  test2.csv  usbad.csv
lecture_22/dtree/: Cargo.toml  decision_tree_example.tex
lecture_22/dtree/src/: main.rs
lecture_23/crossval/: Cargo.toml  foobar
lecture_23/crossval/src/: main.rs
lecture_24_optional_code/parallel_gaussian/: Cargo.toml
lecture_24_optional_code/parallel_gaussian/src/: main.rs
(+65 files in other folders)
