[package]
name = "dtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters={version = "^0.3.0", default_features = false, features = ["evcxr", "all_series"]}
csv = { version = "^1.3" }
serde = { version = "^1", features = ["derive"] }
ndarray = { version = "^0.15.6" }
linfa = { git = "https://github.com/rust-ml/linfa" }
linfa-trees = { git = "https://github.com/rust-ml/linfa" }
