[package]
name = "parallel_gaussian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
rayon = "1.5"
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
